k8s/order_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-deployment
  namespace: lgcns

spec:
  # 자원공간의 낭비를 방지하고 관리의 편의성을 제공해주는 옵션 
  revisionHistoryLimit: 2
  replicas: 2
  selector:   
    matchLabels:
      app: order-pod   # 서비스가 라우팅할 때 찾는 이름 

  template:
    metadata:
      labels:
        app: order-pod   # 스펙의 이름 
    spec:
      containers:
        - name: order-container
          # ecr 경로
          image: 933090817123.dkr.ecr.ap-south-1.amazonaws.com/order-wlguss-backend    
          ports:
            - containerPort: 8080

            # k8s-secret에 설정한 정보를 외부변수로 appliation.yaml에 전달하는 작업
---
apiVersion: v1
kind: Service

metadata:
  name: order-service
  namespace: lgcns

spec:
  type: ClusterIP
  selector:
    app: order-pod
  
  # port forwarding 
  ports:
    - port: 80
      targetPort: 8080
